 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij.

Ctrlproxy 3.0	UNRELEASED

  This list is not complete. Several subsystems in ctrlproxy have been 
  rewritten.

  BUG FIXES

    * NetBSD portability fixes. (Adrian Portelli)

    * Properly support strict-rfc1459 comparisons.

	* No longer depend on specific order of USER and NICK commands.

	* Fixed 100% CPU usage bug.

	* Fix large number of memory leaks.

	* Fix crash bug in log_custom (Korbinian Rosenegger)

	* Support 'true' RFC1459 string comparison.

	* Respect CASEMAPPING sent by server.

	* Support different NICK sent by client in replication.

	* Make repl_* work when NICK sent by client differs from current NICK.

	* Support mIRC and ksirc.

	* Fix bug with setting PRIVATE too often.

	* Fix issue with NickServ IDENTIFY'ing when connecting to server.
	
	* Fix problems with incorrectly added colons.

  INTERNALS

	* Reduce number of files generated by configure.

	* Moved source control system to Bazaar (http://www.bazaar-vcs.org/)

	* Use separate include files rather than one large one.

	* Get rid of complicated filter class system.

	* Several modules have been integrated into the ControlProxy binary 
	  to avoid (engineering) overhead.

	* There now is a testsuite that tests some of the internal functions.

	* Add 'debug' module for easier debugging.

  NEW FEATURES

	* Removed dependency on popt and libxml.

    * Enhance custom_log (Alexander Wild).

	* Add support for %B, %e and %Y in log_custom (Korbinian Rosenegger)

	* Support CONNECT proxy command as used by irssi and other clients.

	* Use new CtrlProxy-specific logging system. 
	  Logs go to ~/.ctrlproxy/log by default now when in daemon mode.

	* nickserv is now "self-learning".

	* Add socks module to allow connecting using SOCKS.

	* Install default configuration that is used when the user 
	  does not have a local configuration.

	* Support autogenerating a configuration using `ctrlproxy --init'.
